# vidu-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh.md  build.rs
.github/workflows/: check-commits.yml  release.yml
npm/vidu-cli/: install.js  package.json
src/: client.rs  main.rs  validators.rs
src/commands/: elements.rs  mod.rs  quota.rs  tasks.rs  upload.rs
tests/: cli_integration.rs  e2e.rs
