[package]
name = "vidu-cli"
description = "client for vidu"
authors = ["Saerdna <zhaodahao@gmail.com>"]
version = "0.2.4"
repository = "https://github.com/Saerdna/vidu-cli"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
lofty = "0.22"
